<?xml version="1.0"?>
<package format="2">
  <name>wibu_tools</name>
  <version>0.0.0</version>
  <description>Convenient tool set for a proprietary software license solution suite CodeMeter or anything that is provided by Wibu.</description>

  <maintainer email="isaac.saito@plusonerobotics.com">Isaac I.Y. Saito</maintainer>
  <maintainer email="support@plusonerobotics.com">Plus One Robotics engineering</maintainer>
  <author email="isaac.saito@plusonerobotics.com">Isaac I.Y. Saito</author>
  <license>Apache License 2.0</license>
  <url type="website">http://wiki.ros.org/wibu_tools</url>
  <url type="bugtracker">https://github.com/plusone-robotics/wibu_tools/issues</url>

  <buildtool_depend>catkin</buildtool_depend>
  <export />
</package>
